# llm-zoomcamp

./: pyproject.toml
01-intro/: homework.ipynb
02-vector-search/: homework.ipynb
03-evaluation/: homework.ipynb
agents/: homework.ipynb  weather_server.py
dlt/: homework.ipynb
dlt/db.qdrant/: meta.json
dlt/db.qdrant/collection/zoomcamp_tagged_data__dlt_loads/: storage.sqlite
dlt/db.qdrant/collection/zoomcamp_tagged_data__dlt_pipeline_state/: storage.sqlite
dlt/db.qdrant/collection/zoomcamp_tagged_data__dlt_version/: storage.sqlite
dlt/db.qdrant/collection/zoomcamp_tagged_data_zoomcamp_data/: storage.sqlite
