[project]
name = "llm-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[qdrant]>=1.13.0",
    "elasticsearch>=8,<9",
    "fastmcp>=2.10.6",
    "ipywidgets>=8.1.7",
    "minsearch>=0.0.4",
    "openai>=1.85.0",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "qdrant-client[fastembed]>=1.14.2",
    "requests>=2.32.4",
    "rouge>=1.0.1",
    "scikit-learn>=1.7.0",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
